# treasure-hunt

./: .gitignore  README.md  debug.py  debug_client.py  debug_server.py  enviroment.yml  main.py  pyproject.toml  run_client.py  run_server.py  test.py  test_client.py
treasure_hunt/: checks.py  constants.py  map.py  play.py  player_spotter.py  templates.py  utils.py
treasure_hunt/client/: client.py  client_eg.py
treasure_hunt/models/: map.py
treasure_hunt/server/: game.py  game_map.py  server.py  server_eg.py
treasure_hunt/utils/: checks.py  constants.py  converters.py  logger.py  move.py  play.py  templates.py
